Enable sysbeep(4) to be heard on speakers on Toughbook mk1 and mk5 computers.  Also on computers with SigmaTel STAC 9200(D), 9202(D) 9404(D), 9205(D) hdaudio controllers as well as Realtek ALC 231 hdaudio controllers reporting as ALC 269.

Addresses PR 45778.
Addresses PR 48495.

This commit was approved by christos@